[project]
name = "django-grainy"
description = "granular permissions for django"
readme = "README.md"
license = {file = "LICENSE"}
version = "2.0.0"
authors = [{name = "20C", email = "code@20c.com"}]
requires-python = ">=3.8,<4.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[[project.packages]]
include = "django_grainy"
from = "src"

dependencies = [
    "grainy >=1.7.0,<2",
    "six >=1.11.0,<=2.0.0",
]

[project.optional-dependencies]
dev = [
    "django >=3.2,<5",
    "djangorestframework >=3.0,<4.0",
    # lint
    "pre-commit >=2.13.0",
    "pyupgrade >=2.34.0",
    "ruff>=0.1",
    # test
    "pytest >=6.0.1",
    "pytest-django >=3.8.0",
    "coverage >=4.1",
    "pytest-cov >=2.2.1",
    "tox >=3.25.0",
    "tox-gh-actions >=2.9.1",
    "tox-uv>=1.13.0",
    # docs
    "markdown-include >=0.5",
    "mkdocs >=1.2.3",
    # ctl
    "ctl >=1",
    "jinja2 >=3",
    "tmpl >=1",
]

# .ruff.toml
[tool.ruff]
ignore = ["F821"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# temporary solution for  https://github.com/python-poetry/poetry/issues/9293
[[project.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"